# isiro

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  shared_logic.rs
ui/: app-styles.slint  app-window.slint
