[package]
name = "isiro"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
opt-level = "s"
lto = true
debug = false
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
incremental = true

[dev-dependencies]
